src/objects/SPE_ScoringCalculation__c.object
<CustomObject>
    <fields>
        <fullName>KPIDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI Definition</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>Scoring Calculations</relationshipLabel>
        <relationshipName>Scoring_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KPIName__c</fullName>
        <formula>SPEKPIMap__r.KPIDefinition__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Threshold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI Threshold</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SPE2_KPI_Threshold__c.KPI_ID__c</field>
                <operation>equals</operation>
                <valueField>$Source.KPIDefinition__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SPE2_KPI_Threshold__c</referenceTo>
        <relationshipLabel>Scoring Calculations</relationshipLabel>
        <relationshipName>Scoring_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LowerTo__c</fullName>
        <label>Lower To</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>==</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lower__c</fullName>
        <label>Lower</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPEKPIMap__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE KPI Map</label>
        <referenceTo>SPE_SPEKPIMap__c</referenceTo>
        <relationshipLabel>Scoring Calculations</relationshipLabel>
        <relationshipName>Scoring_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScoringTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scoring Template</label>
        <referenceTo>SPE_ScoringTemplate__c</referenceTo>
        <relationshipLabel>Scoring Calculations</relationshipLabel>
        <relationshipName>Scoring_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UpperTo__c</fullName>
        <label>Upper To</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>==</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;=</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upper__c</fullName>
        <label>Upper</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Scoring Calculation</label>
    <nameField>
        <displayFormat>SCI-{00000}</displayFormat>
        <label>Scoring Calculation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scoring Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>